apps/support/openwisp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwisp-ingress
  namespace: openwisp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
    - secretName: support4u-se-tls
      hosts:
        - dashboard.openwisp.support4u.se
        - api.openwisp.support4u.se
        - openvpn.openwisp.support4u.se
  rules:
    - host: dashboard.openwisp.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwisp-service
                port:
                  number: 80

    - host: api.openwisp.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwisp-service
                port:
                  number: 80

    - host: openvpn.openwisp.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwisp-service
                port:
                  number: 80
